--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -1,17 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  genre_id: 1
-  name: MyString
-  introduction: MyText
-  is_active: false
-  image_id: MyString
-  price: 1
-
-two:
-  genre_id: 1
-  name: MyString
-  introduction: MyText
-  is_active: false
-  image_id: MyString
-  price: 1
+# This model initially had no columns defined. If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+# column: value
